Added option to configure envoy image Made the docker filesystem read-only Updated go to 1.15 Fixed documentation

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -60,4 +60,6 @@ spec:
           requests:
             cpu: 100m
             memory: 20Mi
+        securityContext:
+          readOnlyRootFilesystem: true
       terminationGracePeriodSeconds: 10
