Adding labels to ExternalService and addinv tmp volume

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -61,4 +61,10 @@ spec:
             memory: 20Mi
         securityContext:
           readOnlyRootFilesystem: true
+        volumeMounts:
+        - mountPath: /tmp
+          name: tmp
       terminationGracePeriodSeconds: 10
+      volumes:
+      - name: tmp
+        emptyDir: {}
